// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders "/movies"  path without crashing 1`] = `
<div
  className="container-fluid"
  style={
    Object {
      "margin": "0 10%",
      "width": "80%",
    }
  }
>
  <div
    className="row"
  >
    <div
      className="jumbotron"
    >
      <h1
        className="display-3"
      >
        dondeveo.es
      </h1>
      <p
        className="lead opacity-75"
      >
        Busca aquí donde puedes ver la peli que te apetezca
      </p>
    </div>
  </div>
  <div
    className="row"
  >
    <h1>
      Soy una muvi
    </h1>
  </div>
</div>
`;

exports[`renders default path without crashing 1`] = `
<div
  className="container-fluid"
  style={
    Object {
      "margin": "0 10%",
      "width": "80%",
    }
  }
>
  <div
    className="row"
  >
    <div
      className="jumbotron"
    >
      <h1
        className="display-3"
      >
        dondeveo.es
      </h1>
      <p
        className="lead opacity-75"
      >
        Busca aquí donde puedes ver la peli que te apetezca
      </p>
    </div>
  </div>
  <div>
    <div
      className="row"
      style={
        Object {
          "marginBottom": "1rem",
        }
      }
    >
      <div
        className="col col-sm-10"
      >
        <input
          className="form-control"
          name="searchTerm"
          onChange={[Function]}
          placeholder="Título de película..."
          type="text"
        />
      </div>
      <div
        className="col col-sm-2"
      >
        <button
          className="btn btn-primary"
          onClick={[Function]}
          type="button"
        >
           Search 
        </button>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col col-sm-12"
      >
        <p
          className="lead"
        >
          
        </p>
        <ul
          className="search-results list-group"
        />
      </div>
    </div>
  </div>
</div>
`;
